[gd_scene load_steps=12 format=3 uid="uid://bthrdu1jvn2e1"]

[ext_resource type="Texture2D" uid="uid://cd4hx81l4uvfi" path="res://textures/vesmir_1.png" id="1"]
[ext_resource type="PackedScene" uid="uid://di6hmgk0twjy" path="res://scenes/Hrac.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://cd4hx81l4uvfi" path="res://Textures/vesmir_1.png" id="2_eetwu"]
[ext_resource type="Script" path="res://scripts/Hra.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://0l7k45q7w2d8" path="res://Textures/vesmir_2.png" id="3_qe7m6"]
[ext_resource type="Texture2D" uid="uid://csg7k5bmk121s" path="res://textures/vesmir_3.png" id="4"]
[ext_resource type="Texture2D" uid="uid://csg7k5bmk121s" path="res://Textures/vesmir_3.png" id="4_llqy0"]
[ext_resource type="Texture2D" uid="uid://0l7k45q7w2d8" path="res://textures/vesmir_2.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bjxqcqv765wxy" path="res://Textures/vesmir_4.png" id="5_r5sit"]
[ext_resource type="Texture2D" uid="uid://bjxqcqv765wxy" path="res://textures/vesmir_4.png" id="6"]
[ext_resource type="FontVariation" uid="uid://c6w5rtfhu3rrk" path="res://Fonts/IBM_normal.tres" id="7_agyay"]

[node name="Hra" type="Node2D"]
script = ExtResource("3")

[node name="Pozadi" type="Node2D" parent="."]
visible = false

[node name="Vesmir1" type="Sprite2D" parent="Pozadi"]
position = Vector2(640, 360)
texture = ExtResource("2_eetwu")
region_enabled = true
region_rect = Rect2(1280, 720, 1280, 720)

[node name="Vesmir2" type="Sprite2D" parent="Pozadi"]
texture_repeat = 2
position = Vector2(640, 360)
texture = ExtResource("3_qe7m6")
region_enabled = true
region_rect = Rect2(-1304, -608, 2648, 1128)

[node name="Vesmir3" type="Sprite2D" parent="Pozadi"]
visible = false
position = Vector2(237, 282)
texture = ExtResource("4_llqy0")

[node name="Vesmir4" type="Sprite2D" parent="Pozadi"]
visible = false
position = Vector2(237, 282)
texture = ExtResource("5_r5sit")

[node name="ScrollovaciPozadi" type="ParallaxBackground" parent="."]

[node name="Vrstva_1" type="ParallaxLayer" parent="ScrollovaciPozadi"]
motion_scale = Vector2(0.11, 0.11)

[node name="Textura_1" type="Sprite2D" parent="ScrollovaciPozadi/Vrstva_1"]
texture_repeat = 2
texture = ExtResource("1")
centered = false
region_enabled = true
region_rect = Rect2(1280, 720, 1280, 720)

[node name="Vrstva_2" type="ParallaxLayer" parent="ScrollovaciPozadi"]
motion_scale = Vector2(0.22, 0.22)

[node name="Textura_2" type="Sprite2D" parent="ScrollovaciPozadi/Vrstva_2"]
texture_repeat = 2
texture = ExtResource("5")
centered = false
region_enabled = true
region_rect = Rect2(1280, 720, 1280, 720)

[node name="Vrstva_3" type="ParallaxLayer" parent="ScrollovaciPozadi"]
motion_scale = Vector2(0.33, 0.33)

[node name="Textura_3" type="Sprite2D" parent="ScrollovaciPozadi/Vrstva_3"]
texture_repeat = 2
texture = ExtResource("4")
centered = false
region_enabled = true
region_rect = Rect2(1280, 720, 1280, 720)

[node name="Vrstva_4" type="ParallaxLayer" parent="ScrollovaciPozadi"]
motion_scale = Vector2(0.44, 0.44)

[node name="Textura_4" type="Sprite2D" parent="ScrollovaciPozadi/Vrstva_4"]
texture_repeat = 2
texture = ExtResource("6")
centered = false
region_enabled = true
region_rect = Rect2(1280, 720, 1280, 720)

[node name="Hrac" parent="." instance=ExtResource("2")]
position = Vector2(335, 145)
rotation_speed = 4

[node name="Camera2D" type="Camera2D" parent="Hrac"]
limit_left = 0
limit_top = 0
limit_right = 1280
limit_bottom = 760

[node name="Ohraniceni" type="StaticBody2D" parent="."]

[node name="OhraniceniKolize" type="CollisionPolygon2D" parent="Ohraniceni"]
build_mode = 1
polygon = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0)

[node name="Projektily" type="Node2D" parent="."]

[node name="Kameny" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ZivotyPopis" type="Label" parent="CanvasLayer"]
offset_left = 1.0
offset_top = -1.0
offset_right = 71.0
offset_bottom = 21.0
theme_override_fonts/font = ExtResource("7_agyay")
theme_override_font_sizes/font_size = 24
text = "Lives: "

[node name="ZivotyHodnota" type="Label" parent="CanvasLayer"]
offset_left = 146.0
offset_top = -1.0
offset_right = 216.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("7_agyay")
theme_override_font_sizes/font_size = 24
text = "0"

[node name="SkorePopis" type="Label" parent="CanvasLayer"]
offset_left = 330.0
offset_top = 1.0
offset_right = 468.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("7_agyay")
theme_override_font_sizes/font_size = 24
text = "Score:"

[node name="SkoreHodnota" type="Label" parent="CanvasLayer"]
offset_left = 480.0
offset_top = 1.0
offset_right = 550.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("7_agyay")
theme_override_font_sizes/font_size = 24
text = "0"

[node name="NOVY_KAMEN" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="hit_kamen" from="Hrac" to="." method="_on_Hrac_hit_kamen"]
[connection signal="timeout" from="NOVY_KAMEN" to="." method="_on_NOVY_KAMEN_timeout"]
